--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
-# Variables - Création des index
-# Modèle de transformers pour le calcul des embeddings
 TRANSFORMER = sentence-transformers/all-MiniLM-L6-v2
 
-# Variables - Mise en place du RAG
-# Modèle de RAG
-MODEL_NAME = facebook/rag-sequence-nq
-# Chemin d'accès aux passage
-PASSAGES_PATH = data/processed/passages.jsonl
-# Chemin d'accès à l'index
-INDEX_PATH = models/faiss_index.idx
+MODEL_NAME = google/flan-t5-base
+
+DPR_DATASET = ../data/processed/passages_dataset_dpr
+
+PASSAGES_PATH = ../data/processed/passages.jsonl
+
+INDEX_PATH = ../data/processed/faiss_index.idx
