Mise à jour de la liste des modules à installer pour le projet (Module d'indexation)

--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ multidict==6.0.5
 networkx==3.3
 numpy==1.26.4
 packaging==24.1
-pandas==2.2.2
+pandas~=2.3.1
 parso==0.8.4
 pathy==0.11.0
 pillow==10.3.0
@@ -108,13 +108,13 @@ thinc==8.2.3
 tiktoken==0.7.0
 tokenizers==0.19.1
 tomli==2.0.1
-torch==2.3.1
+torch~=2.7.1
 torchaudio==2.3.1
 torchvision==0.18.1
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.3
-transformers==4.41.2
+transformers~=4.53.2
 #triton==2.3.1
 typer==0.9.0
 types-python-dateutil==2.9.0.20240316
@@ -128,3 +128,7 @@ wheel==0.43.0
 widgetsnbextension==4.0.10
 yarl==1.17.0
 zipp==3.18.2
+faiss~=1.9.0
+python-dotenv~=1.1.1
+datasets~=4.0.0
+peft~=0.16.0
