--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,36 @@
-accelerate==1.9.0
+﻿accelerate==1.9.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
 aiohttp-retry==2.8.3
 aiosignal==1.4.0
 annotated-types==0.6.0
+anyio==4.9.0
 appnope==0.1.4
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
 bitsandbytes==0.43.1
+blis==0.7.11
+catalogue==2.0.10
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
 comm==0.2.2
+confection==0.1.5
 contourpy==1.2.1
 cycler==0.12.1
+cymem==2.0.11
+datasets==2.14.2
 debugpy==1.8.1
 decorator==5.1.1
-dill==0.3.8
+dill==0.3.6
 diskcache==5.6.3
 exceptiongroup==1.2.1
 executing==2.0.1
+faiss-cpu==1.7.4
 filelock==3.14.0
 fonttools==4.53.0
 frozenlist==1.4.1
@@ -32,6 +41,7 @@ grpcio==1.64.0
 h11==0.14.0
 h2==4.1.0
 hnswlib==0.8.0
+hpack==4.1.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
@@ -40,6 +50,7 @@ hyperframe==6.0.1
 idna==3.7
 imageio==2.34.1
 importlib_metadata==7.1.0
+intel-openmp==2021.4.0
 ipykernel==6.29.4
 ipython==8.24.0
 ipywidgets==8.1.2
@@ -52,34 +63,50 @@ jupyter_client==8.6.2
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.10
 kiwisolver==1.4.5
+langcodes==3.5.0
+language_data==1.3.0
 lxml==5.2.2
+marisa-trie==1.2.1
 Markdown==3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+mkl==2021.4.0
 mpmath==1.3.0
 multidict==6.0.5
+multiprocess==0.70.14
+murmurhash==1.0.13
+nest-asyncio==1.6.0
 networkx==3.3
+nltk==3.9.1
 numpy==1.26.4
-packaging==24.1
+packaging==23.1
 pandas==2.2.2
 parso==0.8.4
+pathlib_abc==0.1.1
 pathy==0.11.0
 pillow==10.3.0
-pip==24.0
 platformdirs==4.2.2
 ply==3.11
 preshed==3.0.9
 proglog==0.1.10
-prompt-toolkit==3.0.47
+prompt_toolkit==3.0.47
+propcache==0.3.2
 protobuf==5.27.0
 psutil==5.9.8
-pure_eval==0.2.2
+pure-eval==0.2.2
+pyarrow==11.0.0
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
 pyparsing==3.1.2
 pyrsistent==0.20.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32==311
 PyYAML==6.0.1
 pyzmq==26.0.3
 referencing==0.35.1
@@ -90,9 +117,10 @@ rpds-py==0.18.1
 safetensors==0.4.3
 scikit-learn==1.5.0
 scipy==1.13.1
-sentence-transformers==2.7.0
+sentence-transformers==2.2.2
 sentencepiece==0.2.0
 six==1.16.0
+smart-open==6.4.0
 sniffio==1.3.1
 soupsieve==2.5
 spacy==3.7.4
@@ -100,13 +128,14 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
 srsly==2.4.8
-stack_data==0.6.3
+stack-data==0.6.3
 sympy==1.12
+tbb==2021.13.1
 termcolor==2.4.0
-threadpoolctl==3.5.0
 thinc==8.2.3
+threadpoolctl==3.5.0
 tiktoken==0.7.0
-tokenizers==0.19.1
+tokenizers==0.13.3
 tomli==2.0.1
 torch==2.3.1
 torchaudio==2.3.1
@@ -114,8 +143,7 @@ torchvision==0.18.1
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.3
-transformers==4.41.2
-#triton==2.3.1
+transformers==4.31.0
 typer==0.9.0
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.1
@@ -123,8 +151,9 @@ tzdata==2024.1
 urllib3==2.2.1
 wasabi==1.1.2
 wcwidth==0.2.13
+weasel==0.3.4
 websockets==12.0
-wheel==0.43.0
 widgetsnbextension==4.0.10
+xxhash==3.5.0
 yarl==1.17.0
 zipp==3.18.2
