Updated the final file to include the pipeline

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TRANSFORMER = sentence-transformers/all-MiniLM-L6-v2
+TRANSFORMER = sentence-transformers/multi-qa-MiniLM-L6-cos-v1
 
 MODEL_NAME = google/flan-t5-base
 
@@ -7,3 +7,5 @@ DPR_DATASET = ../data/processed/passages_dataset_dpr
 PASSAGES_PATH = ../data/processed/passages.jsonl
 
 INDEX_PATH = ../data/processed/faiss_index.idx
+
+GEN_MODEL = "google/flan-t5-base"
