--- a/requirements.txt
+++ b/requirements.txt
@@ -1,163 +1,94 @@
 ﻿accelerate==1.9.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
-aiohttp-retry==2.8.3
 aiosignal==1.4.0
-annotated-types==0.6.0
-anyio==4.9.0
-appnope==0.1.4
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.2.0
-beautifulsoup4==4.12.3
-bitsandbytes==0.43.1
-blis==0.7.11
-catalogue==2.0.10
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
+asttokens==3.0.0
+attrs==25.3.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
 colorama==0.4.6
-comm==0.2.2
-confection==0.1.5
-contourpy==1.2.1
+comm==0.2.3
+contourpy==1.3.3
 cycler==0.12.1
-cymem==2.0.11
-datasets==2.14.2
-debugpy==1.8.1
-decorator==5.1.1
-dill==0.3.6
-diskcache==5.6.3
-exceptiongroup==1.2.1
-executing==2.0.1
-faiss-cpu==1.7.4
-filelock==3.14.0
-fonttools==4.53.0
-frozenlist==1.4.1
-fsspec==2024.6.0
-gdown==5.2.0
-greenlet==3.0.3
-grpcio==1.64.0
-h11==0.14.0
-h2==4.1.0
-hnswlib==0.8.0
-hpack==4.1.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.23.1
-hyperframe==6.0.1
-idna==3.7
-imageio==2.34.1
-importlib_metadata==7.1.0
-intel-openmp==2021.4.0
-ipykernel==6.29.4
-ipython==8.24.0
-ipywidgets==8.1.2
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.10
-kiwisolver==1.4.5
-langcodes==3.5.0
-language_data==1.3.0
-lxml==5.2.2
-marisa-trie==1.2.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
+datasets==2.14.6
+debugpy==1.8.15
+decorator==5.2.1
+dill==0.3.7
+executing==2.2.0
+faiss-cpu==1.11.0.post1
+fastjsonschema==2.21.1
+filelock==3.18.0
+fonttools==4.59.0
+frozenlist==1.7.0
+fsspec==2023.10.0
+huggingface-hub==0.34.1
+idna==3.10
+ipykernel==6.30.0
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
-mdurl==0.1.2
-mkl==2021.4.0
 mpmath==1.3.0
-multidict==6.0.5
-multiprocess==0.70.14
-murmurhash==1.0.13
+multidict==6.6.3
+multiprocess==0.70.15
+narwhals==1.48.1
+nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.3
+networkx==3.5
 nltk==3.9.1
 numpy==1.26.4
-packaging==23.1
-pandas==2.2.2
+packaging==25.0
+pandas==2.0.3
 parso==0.8.4
-pathlib_abc==0.1.1
-pathy==0.11.0
-pillow==10.3.0
-platformdirs==4.2.2
-ply==3.11
-preshed==3.0.9
-proglog==0.1.10
-prompt_toolkit==3.0.47
+pillow==11.3.0
+platformdirs==4.3.8
+plotly==6.2.0
+prompt_toolkit==3.0.51
 propcache==0.3.2
-protobuf==5.27.0
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow==11.0.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-pyparsing==3.1.2
-pyrsistent==0.20.0
-PySocks==1.7.1
+psutil==7.0.0
+pure_eval==0.2.3
+pyarrow==13.0.0
+Pygments==2.19.2
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-pytz==2024.1
+pytz==2025.2
 pywin32==311
-PyYAML==6.0.1
-pyzmq==26.0.3
-referencing==0.35.1
-regex==2024.5.15
-requests==2.32.3
-rich==13.7.1
-rpds-py==0.18.1
-safetensors==0.4.3
-scikit-learn==1.5.0
-scipy==1.13.1
-sentence-transformers==2.2.2
+PyYAML==6.0.2
+pyzmq==27.0.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+rpds-py==0.26.0
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.16.0
+seaborn==0.13.2
+sentence-transformers==2.6.1
 sentencepiece==0.2.0
-six==1.16.0
-smart-open==6.4.0
-sniffio==1.3.1
-soupsieve==2.5
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.30
-srsly==2.4.8
+six==1.17.0
 stack-data==0.6.3
-sympy==1.12
-tbb==2021.13.1
-termcolor==2.4.0
-thinc==8.2.3
-threadpoolctl==3.5.0
-tiktoken==0.7.0
-tokenizers==0.13.3
-tomli==2.0.1
-torch~=2.7.1
-torchaudio==2.3.1
-torchvision==0.18.1
-tornado==6.4
-tqdm==4.66.4
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+torch==2.7.1
+torchvision==0.22.1
+tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.31.0
-typer==0.9.0
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.12.1
-tzdata==2024.1
-urllib3==2.2.1
-wasabi==1.1.2
+transformers==4.54.0
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
 wcwidth==0.2.13
-weasel==0.3.4
-websockets==12.0
-widgetsnbextension==4.0.10
 xxhash==3.5.0
-yarl==1.17.0
-zipp==3.18.2
-faiss~=1.9.0
-python-dotenv~=1.1.1
-datasets~=4.0.0
-peft~=0.16.0
+yarl==1.20.1
